# Test

./: dev
SJTU CP2022-23/: CMakeLists.txt  CP2022-23.1.cpp  CP2022-23_v0220a.cpp  CP2022-23_v0220b.cpp  CP2022-23_v0227a.cpp  Ising.cpp  IsingSimulation.cpp  IsingSystem.hpp  Lattice.cpp  Lattice.hpp  Lattice_test.cpp  main.cpp  main_v0220a.cpp
SJTU CP2022-23.xcodeproj/: project.pbxproj
SJTU CP2022-23.xcodeproj/xcuserdata/yoshi.xcuserdatad/xcschemes/: xcschememanagement.plist
SJTU CP2022-23/UnitTests/: IsingSystem_test.cpp  Lattice_test.cpp
